NIHVIVO-2858: Fixed extra spacing between email and phone. I can't see extra spacing between  email addresses and web pages on person page. Must be fixed in another commit.

--- a/webapp/web/css/individual/individual.css
+++ b/webapp/web/css/individual/individual.css
@@ -144,7 +144,7 @@ ul.individual-emails {
     padding-left: 0;
 }
 #additional-emails li:last-child {
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 ul.individual-emails li {
     font-size: .875em;
